--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.notion.so/217082415e6e8094a98ed3d3737d5e3d?pvs=25" />
+    <meta http-equiv="refresh" content="0; url=https://diazfilms.my.canva.site/javier-d-az" />
     <title>Redirigiendo...</title>
   </head>
   <body>
