--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Redirigiendo...</title>
   </head>
   <body>
-    <p>Redirigiendo a Notion...</p>
+    <h1>Cargando Portfolio</h1>
+    <img src="https://i.imgur.com/Gbn6GCR.gif" alt="Animación decorativa" style="max-width: 100%; height: auto;" />
   </body>
 </html>
